--- a/src/main/resources/plugins.properties
+++ b/src/main/resources/plugins.properties
@@ -1,3 +1,3 @@
-GFX_PLUGIN=me.hydos.J64.gfx.GLN64jPlugin
-AUDIO_PLUGIN=me.hydos.J64.emu.audio.Default
-CONTROLLER_PLUGIN=me.hydos.J64.emu.controller.Default
+GFX_PLUGIN=gln64j.GLN64jPlugin
+AUDIO_PLUGIN=me.hydos.J64.audio.Default
+CONTROLLER_PLUGIN=me.hydos.J64.controller.Default
